# evaluate-highlighted-text

./: .gitignore  README.md  pyproject.toml  requirements.in
examples/: main.py
src/evaluate_highlighted_text/: __init__.py  evaluator.py
src/evaluate_highlighted_text/defaults/: __init__.py  formatting.py
src/evaluate_highlighted_text/defaults/math/: __init__.py  __main__.py  preprocessing.py
